include multitenancy component to project

--- a/modules/web/src/com/trx/cubasqlview/web-app.properties
+++ b/modules/web/src/com/trx/cubasqlview/web-app.properties
@@ -20,6 +20,8 @@ cuba.permissionConfig = +com/trx/cubasqlview/web-permissions.xml
 
 cuba.mainMessagePack = +com.trx.cubasqlview.web
 
+cuba.anonymousSessionId =
+
 cuba.creditsConfig = +
 
 ###############################################################################
