--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ def coreModule = project(":${modulePrefix}-core")
 def webModule = project(":${modulePrefix}-web")
 
 def servletApi = 'javax.servlet:javax.servlet-api:3.1.0'
+def sdbmtVersion = '2.0.2'
 
 apply(plugin: 'cuba')
 
@@ -36,6 +37,7 @@ cuba {
 
 dependencies {
     appComponent("com.haulmont.cuba:cuba-global:$cubaVersion")
+    appComponent("com.haulmont.addon.sdbmt:sdbmt-global:$sdbmtVersion")
 }
 
 def postgres = 'org.postgresql:postgresql:42.2.9'
