--- a/modules/core/src/com/trx/cubasqlview/app.properties
+++ b/modules/core/src/com/trx/cubasqlview/app.properties
@@ -14,6 +14,10 @@ cuba.viewsConfig = +com/trx/cubasqlview/views.xml
 
 cuba.mainMessagePack = +com.trx.cubasqlview.core
 
+cuba.keyForSecurityTokenEncryption =
+
+cuba.anonymousSessionId =
+
 ###############################################################################
 #                                  Other                                      #
 ###############################################################################
